<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="coed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="desired_league">Desired League:</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="findcitytext">Find a team in your city and dominate your league</string>
    <string name="get_started">GET STARTED</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="i_am_a">I am a</string>
    <string name="background_image">Background Image</string>
</resources>
