<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image" />
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp"
            app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="233dp"
            android:layout_height="55dp"
            android:id="@+id/textView" android:textSize="46sp"
            android:textColor="#FFFFFF" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:fontFamily="@font/montserrat"
            android:textSize="22sp" android:textColorLink="#FFFFFF" android:textColor="#FFFFFF"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/findcitytext"
            android:layout_width="201dp"
            android:layout_height="43dp"
            android:id="@+id/textView3" android:textColor="#FFFFFF"
            android:singleLine="false" android:textAlignment="center" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/montserrat"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat" android:textSize="18sp" android:textColor="#FFFFFF"
            android:background="@drawable/swoosh_button" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"/>

</android.support.constraint.ConstraintLayout>